# IR-remote

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.ci.samsung  sdkconfig.old
components/infrared_tools/: CMakeLists.txt
components/infrared_tools/include/: ir_timings.h  ir_tools.h
components/infrared_tools/src/: ir_builder_rmt_airton.c  ir_builder_rmt_dish.c  ir_builder_rmt_gree.c  ir_builder_rmt_jvc.c  ir_builder_rmt_lego.c  ir_builder_rmt_lg.c  ir_builder_rmt_nec.c  ir_builder_rmt_panasonic.c  ir_builder_rmt_samsung.c  ir_builder_rmt_sharp.c  ir_builder_rmt_sony.c  ir_builder_rmt_toshibaAC.c  ir_parser_rmt_airton.c  ir_parser_rmt_dish.c  ir_parser_rmt_gree.c  ir_parser_rmt_jvc.c  ir_parser_rmt_lego.c  ir_parser_rmt_lg.c  ir_parser_rmt_nec.c  ir_parser_rmt_panasonic.c  ir_parser_rmt_samsung.c  ir_parser_rmt_sharp.c  ir_parser_rmt_sony.c  ir_parser_rmt_toshibaAC.c
components/src/: remote.c
main/: CMakeLists.txt  Kconfig.projbuild  ir_protocols_main.c  samsungTest_ir_protocols_main.c
